--- a/less/formulario.less
+++ b/less/formulario.less
@@ -1,4 +1,8 @@
 
+/* <!--:::::::::::::::::::::::::::::::::::::::::::::
+::::::::::::::Ing. Yelitza Arreaza:::::::::::::::
+::::::::::Diplomado en Programación Web::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::-->*/
 /*////////VARIABLES PARA LOS COLORES///////////*/
 @azul:#0094B9;
 @blanco:#FFFFFF;
@@ -69,7 +73,7 @@
 		font-size: 16px;
 		margin-top: 5px; /*sube un poco el texto*/
 	    padding: 3px;
-		width: 20%;
+		width: 32%;
 		text-align: right;
 	}
 
