--- a/less/menu.less
+++ b/less/menu.less
@@ -1,3 +1,7 @@
+/* <!--:::::::::::::::::::::::::::::::::::::::::::::
+::::::::::::::Ing. Yelitza Arreaza:::::::::::::::
+::::::::::Diplomado en Programación Web::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::-->*/
 
 /*////////VARIABLES PARA LOS COLORES///////////*/
     @azul:#0094B9;
