--- a/less/slider.less
+++ b/less/slider.less
@@ -1,6 +1,9 @@
-
+/* <!--:::::::::::::::::::::::::::::::::::::::::::::
+::::::::::::::Ing. Yelitza Arreaza:::::::::::::::
+::::::::::Diplomado en Programación Web::::::::::
+:::::::::::::::::::::::::::::::::::::::::::::::::-->*/
 .slider-wrapper { 
-    width: 95%; 
+    width: 100%; 
     margin: 100px auto;
     margin-top: 10px;
     margin-bottom: -10px;
