Ajustes Pantalla principal

--- a/less/estilos.less
+++ b/less/estilos.less
@@ -180,7 +180,7 @@ footer{
 	height: auto;
 	display: inline-block;
 	vertical-align: top;
-	margin-top: 0.7em;
+	/*margin-top: 0.7em;*/
 	}
 
 .logo-innodite {
@@ -515,7 +515,7 @@ vertical-align: top;
 .ContenedorPrincipal{
 	display: inline-block;
 	vertical-align: top;
-	width: 50%;
+	width: 60%;
 }
 
 
@@ -608,4 +608,9 @@ vertical-align: top;
 .column {
   width: 55%; 
   padding: 1em;
+}
+
+.thick {
+    margin-left: 60px;
+    text-align: left;
 }
