--- a/less/menu.less
+++ b/less/menu.less
@@ -37,7 +37,7 @@
   display: inline-block;
   color: @negro; 
  /* padding: 2px 12px 2px 12px;*/ /*arriba, derecha, abajo, izquierda*/
- padding: 0.1em;
+ /*padding: 0.1em;*/
   .redondeado;
 }
 
