--- a/less/menu.less
+++ b/less/menu.less
@@ -29,6 +29,7 @@
 
 /*:::::::::::::::::::INICIO DEL MENÚ SUPERIOR:::::::::::::::::::::::::*/
 #nav {
+  margin-left: 30px;
   margin: 0 auto;
   padding-top: 0.5em;
 }
@@ -37,7 +38,7 @@
   display: inline-block;
   color: @negro; 
  /* padding: 2px 12px 2px 12px;*/ /*arriba, derecha, abajo, izquierda*/
- padding: 0.1em;
+ /*padding: 0.1em;*/
   .redondeado;
 }
 
@@ -45,11 +46,9 @@
 
      padding: 2px 7px 7px 7px;
      
-      background-color:@negro;
+
     color: @blanco;
-     .redondeado (0.4em);
      text-decoration: none;
-     box-shadow: 0px 0px 5px @negro;
      font-size:1em; /*Tamaño de las letras del menú*/
      font-weight:bold;
      display: block;/* conserva el ancho del menú*/  
@@ -58,8 +57,7 @@
  #nav li a:hover{
     padding: 2px 7px 2px 7px;
    color: @negro;
-     background-color:@blanco;
-    .redondeado (0.4em);
+  
     .transicion;
   }
 
@@ -76,7 +74,7 @@
   #nav a {
      padding: 2px 7px 2px 7px; /*arriba, derecha, abajo, izquierda*/
     color: @negro;
-    background: @blanco;
+ 
     .redondeado;
   }
 }
