--- a/less/estilos.less
+++ b/less/estilos.less
@@ -86,6 +86,7 @@ header {
 	margin:0em auto;
 	padding: 0.5em;
 	color:@negro;
+        text-align: left;
 	.redondeado (1em 0em 0em 0em;);
 	 }
 
@@ -611,6 +612,7 @@ vertical-align: top;
 }
 
 .thick {
+    display: inline-block;
     margin-left: 60px;
     text-align: left;
 }
