--- a/less/menu.less
+++ b/less/menu.less
@@ -77,6 +77,10 @@
     color: @blanco;
     background: @negro;
   }
+  header {
+   .redondeado (5em 0em 0em 5em;); /*1ero superior izquierda, 2do superior derecha, 3ero inferior derecha y 4to inferior izquierda*/
+  
+  }
 }
 /*:::::::::::::::::::FIN DEL MENÚ SUPERIOR:::::::::::::::::::::::::*/
 
