--- a/less/estilos.less
+++ b/less/estilos.less
@@ -501,15 +501,17 @@ vertical-align: top;
 }
 
 .columna1-1, .columna3-1 {
-   width: 0.5%;
+   width: 0.4%;
    padding: 10px;
-   margin: 0 auto; 
+   height: 10%;
+   margin-top: 38px;
+  
   	background: @azul;
-   .redondeado (24px 24px 24px 24px);
+   .redondeado (50px 50px 50px 50px);
     .sombreado;
    color: @negro;
    font-size: 18px;
-   padding: 20px;
+ 
   
     
 }
