Imagen que "gira"

--- a/less/estilos.less
+++ b/less/estilos.less
@@ -114,7 +114,7 @@ h3{
 
 }
 h4{
-	font-size: 14px;
+	font-size: 12px;
 	text-align: center;
 }
 
@@ -200,16 +200,7 @@ footer{
 #div-logo{
 	margin-top: 20px;
 	}
-/*:::::::::::::::::::::::FINLOGO "ANIMADO":::::::::::::::::::::::::::*/
-
-.logos-sociales{
-	width: 300px;	
-	float: right;
-	margin: auto;
-	margin-top: -100px;
-	}
-
-
+/*:::::::::::::::::::::::FIN LOGO "ANIMADO":::::::::::::::::::::::::::*/
 
 
 .clic {
@@ -281,57 +272,6 @@ a.ver-mas:hover {
 
 
 
-/*::::::::::::::::::::::::INICIO REDES SOCIALES:::::::::::::::::::::::::*/
-.grid-unit{
-	display: inline-block;
-	vertical-align: top;
-	margin: 0 auto;
-	width: 10px;
-	height: 25px;
-
-}
-.twitter-timeline{
-display: inline-block;
-	vertical-align: top;
-	margin: 0 auto;
-	height: 400px;
-
-}
-
-.fb-like-box{
-	margin: 0 auto;
-	width: 200px;
-	height: 400px;
-	
-	/*margin-top: 40px;*/
-	background: @blanco;
-	.redondeado (@medida:5px 5px 5px 5px;);
-	border: 1px solid @gris;
-	margin-bottom: 10px;
-	/*.sombreado;*/
-}
-#fb-root{
-	width: 40%;
-}
-
-
- .etabs { margin: 0; padding: 0; text-align: left;}
- .tab {background: @negro; color: #FFF;  display: inline-block; zoom:1; *display:inline; border: solid 1px #999; border-bottom: none; -moz-border-radius: 10px 10px 0 0; -webkit-border-radius: 10px 10px 0 0; }
- .tab a {  font-size: 14px; line-height: 2em; display: block; padding: 0 10px; outline: none; text-decoration: none; color: @azul; }
- .tab.active {  color: #FFF;  padding-top: 6px; position: relative; top: 1px; border-color: #666; }
- .tab a.active { font-weight: bold; }
- .tab-container .panel-container {.sombreado; background: @azul;  width: 205px; height: 435px; border: solid #0094B9 1px; padding: 10px; -moz-border-radius: 0 10px 10px 10px; -webkit-border-radius: 0 10px 10px 10px; }
- .tab-container{float: right;}
- .panel-container { margin-bottom: 10px; }
- .tab { text-decoration: none}
-
- #tabs1-tw, #tabs1-fb{
- 	float: left;
- }
-
-
-
-/*:::::::::::::::::::::::::::FIN REDES SOCIALES:::::::::::::::::::::::::*/
 /*:::::::::::::::::::::::::::::INICIO VIDEO::::::::::::::::::::::::::::*/
 #video{
 	width: 80%;
@@ -357,7 +297,7 @@ display: inline-block;
 
 .img-servicios, .img-descriservi {
 	border-radius: 1em;
-	width: 90%;
+	width: 80%;
 	 /*position:relative;*/
 }
 
@@ -410,7 +350,7 @@ display: inline-block;
   -webkit-flex-flow: row wrap;
   flex-flow: row wrap; 
     /*background: @negro;*/
-    width: 90%;
+    width: 94%;
     margin: 0 auto;
     margin-top: 10px;
     flex: 1 92%;
@@ -444,55 +384,21 @@ border-bottom: 1px solid @gris;
  /*background: @negro;*/
  /* width: 90%;*/
 }
-.columna1, .columna2, .columna3 {
-	
-	/*border:  solid 0.1em @gris;*/
-
-}
 
 .columna1, .columna2, .columna3 {
-  /*background: @verde;*/
-
-   width: 0.5%;
-   padding: 10px;
-   margin: 0 auto; 
-   display: inline-block;
-vertical-align: top;
-
-}
-.columna1 {width:10%;}
-.columna3{
-	/*background: @rojo;*/
-	width: 10%;
-	display: inline-block;
-	vertical-align: top;
-}
-
-.columna4{
-	/*vertical-align: top;
-	margin: 0 auto;*/
-	float: right;
-	margin-top: 80px; 
-
-}
-.columna1 {
-	width: 20%;		
+  	padding: 5px;
+	width: -10%;		
 	display: inline-block;
 	vertical-align: top;
 	margin: 0 auto;
 	margin-bottom: 20px;
-
-
- 	/*border-bottom: solid 0.1em @azul;
- 	margin-bottom: 20px;*/
 }
-/*.particular1{
 
- 	border-bottom: solid 0.1em @azul;
- 	border-top: solid 0.1em @azul;
- 	margin-bottom: 20px,
-}*/
-/*:::::::*/
+.columna4 {
+	float: right;
+	margin-top: 80px; 
+
+}
 
 .columna2-1,  {
   text-align: left;
@@ -501,20 +407,17 @@ vertical-align: top;
 }
 
 .columna1-1, .columna3-1 {
-   width: 0.4%;
-   padding: 10px;
-   height: 10%;
-   margin-top: 38px;
-  
-  	background: @azul;
-   .redondeado (50px 50px 50px 50px);
+   	width: 0.4%;
+   	padding: 10px;
+   	height: 10%;
+  	margin-top: 38px;
+ 	background: @azul;
+   	.redondeado (50px 50px 50px 50px);
     .sombreado;
-   color: @negro;
-   font-size: 18px;
- 
-  
-    
+   	color: @negro;
+   	font-size: 18px; 
 }
+
 .columna3-1{
 
 	width: 60%;
@@ -522,9 +425,10 @@ vertical-align: top;
 /*::::::::::::::*/
 
 .ContenedorPrincipal{
-	display: inline-block;
-	vertical-align: top;
-	width: 60%;
+	/*display: inline-block;
+	vertical-align: top;*/
+	width: 75%;
+
 }
 
 
@@ -607,14 +511,19 @@ vertical-align: top;
 	.columna1, .columna2, .columna3, .slider-wrapper, video  {width: 90%;}	
   	.columna1 {/*background-color: @verde; */padding: 10px; flex: 0 500px;}
   	.columna1-1 {/*background-color: @verde;*/ padding: 10px; flex: 0 500px;}
+  	.img-servicio {width: 100%;}
+  	.ContenedorPrincipal {margin: 0 auto;}
 
   }
 
 
 /*Escritorio o Tv*/
 @media (min-width: 1200px) {
-	.columna1, .columna2, .columna3,  video  {width: 20%;}	
+	.columna1, .columna2, .columna3,  video  {width: 20%; margin: 0 auto;}	
+
 	/*.columna3-1 {background-color: @azul;}*/
+	.img-servicio {width: 100%;}
+
 
 }
 
@@ -626,8 +535,70 @@ vertical-align: top;
   padding: 1em;
 }
 
-.thick {
-    display: inline-block;
-    margin-left: 60px;
-    text-align: left;
-}
+
+/*:::::::::::::::::::::inicio voltea imagen::::::::::::::::::::::::::::::::::::*/
+   /* Animation voltear */
+                    
+                    .body_m {background:#999;}
+                    
+                    .flip-container {
+                        margin: 0 auto;
+                        -webkit-perspective: 1000;
+                        -moz-perspective: 1000;
+                    }
+
+                    .flip-container:hover .flipper {
+                        -webkit-transform: rotateY(180deg);
+                        -moz-transform: rotateY(180deg);
+                    }
+                    
+                    .flipper {
+                        background:#fff;
+                        -webkit-transition: 0.6s;
+                        -webkit-transform-style: preserve-3d;
+                        -moz-transition: 0.6s;
+                        -moz-transform-style: preserve-3d;
+                        position: relative;
+                    }
+                    
+                    .front, .back {
+                        -webkit-backface-visibility: hidden;
+                        -moz-backface-visibility: hidden;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                    }
+
+                    .front {
+                        text-align:center;
+                        /*padding-top:30px;*/
+                        background:#fff;
+                        z-index: 1;
+                    }
+
+                    .flip-container, .front, .back {
+                        
+                        width: 50%;
+                        /*height: 14.375em;
+                        */
+                    }
+
+                    .back {
+                        background:#636363;
+                        /*padding-top:30px;*/
+                        -webkit-transform: rotateY(-180deg);
+                        -moz-transform: rotateY(-180deg);
+                    }
+                    
+                    .back p {
+                        margin-left:10px;
+                        color:white;font-weight:300;
+                    }
+                    
+                    .blurry {
+                        -webkit-filter: blur(7px);
+                        filter: blur(7px);
+                        -webkit-transform: translateY(0px)
+                                           translate3d(0,0,0);
+                    }
+/*:::::::::::::::::::::inicio voltea imagen::::::::::::::::::::::::::::::::::::*/
