--- a/less/menu.less
+++ b/less/menu.less
@@ -81,14 +81,12 @@
 }
 /*:::::::::::::::::::FIN DEL MENÚ SUPERIOR:::::::::::::::::::::::::*/
 
-/*:::::::::::::::::INICIO MENÚ TRANSPARENTE:::::::::::::::::::::::::*/
-#sticky_navigation {
-    z-index: 1030;
-}
+
+
 .social-icons-row > a {
     margin-left: 25px;
 }
-/*::::::::::::::::::::FIN MENÚ TRANSPARENTE:::::::::::::::::::::::::*/
+
 
 /*:::::::::::::::::::::INICIO MENÚ INFERIOR:::::::::::::::::::::::::*/
   
@@ -122,3 +120,43 @@
   }
   /*:::::::::::::::::::::FIN MENÚ INFERIOR:::::::::::::::::::::::::*/
 
+/*:::::::::::::::::::::::::INICIO MENÚ TRANSPARENTE::::::::::::::::::::::::::*/
+
+.thick {
+    display: inline-block;
+    margin-left: 60px;
+    text-align: left;
+}
+
+
+
+ #sticky_navigation {
+                      z-index: 1048;
+                    }
+                    #logofffocus {
+                        width: 35px; 
+                        height: 35px; 
+                        margin-left: 20px;
+                        float: left; 
+
+                        visibility: visible;
+                    }
+                    
+                    #contactsocial {
+                        display: inline-block;
+                         color: #FFFFFF;
+                        float: right;
+                      
+                        margin-top: -50px;
+                        visibility: hidden;
+                    }
+                    
+                  /*  #contactsocial img {
+                        width: 32px;
+                        height: 32px;
+                        vertical-align: top;
+                        margin-top: 0px;
+                        top: 0px;
+                        padding: 1.5px;
+                    }*/
+/*:::::::::::::::::::::::::FIN MENÚ TRANSPARENTE::::::::::::::::::::::::::*/
