--- a/less/menu.less
+++ b/less/menu.less
@@ -150,8 +150,8 @@
                         margin-top: -50px;
                         visibility: hidden;
                     }
-                    
-                  /*  #contactsocial img {
+                    /*
+                    #contactsocial img {
                         width: 32px;
                         height: 32px;
                         vertical-align: top;
